# AutoCase

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: ci.yml
config/: llm.example.yaml  llm.yaml  system_prompt.txt
inputs/: input.example.yaml
src/autocase/: __init__.py  cli.py  generator.py  llm_client.py  parser.py
